02-mongo/01-mongo.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  mongo
  labels:
    app:  mongo
spec:
  selector:
    matchLabels:
      app: mongo
  replicas: 1
  template:
    metadata:
      labels:
        app: mongo
    spec:
      containers:
      - name:  mongo
        image:  mongo
        ports:
        - containerPort: 27017
          name:  mongo
---
apiVersion: v1
kind: Service
metadata:
  name: mongo-service
spec:
  selector:
    app: mongo
  type: ClusterIP
  ports:
  - name: mongo-service
    protocol: TCP
    port: 27017
    targetPort: 27017
