02-mongo/02-mongo-express.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  mongo-express
  labels:
    app:  mongo-express
spec:
  selector:
    matchLabels:
      app: mongo-express
  replicas: 1
  template:
    metadata:
      labels:
        app:  mongo-express  
    spec:
      containers:
      - name: mongo-express
        image: mongo-express
        ports:
        - containerPort: 8081
          name:  mongo-express
---
apiVersion: v1
kind: Service
metadata:
  name: mongo-express
spec:
  selector:
    app: mongo-express
  type: ClusterIP
  ports:
  - name: mongo-express
    protocol: TCP
    port: 8081 
    targetPort: 8081
